recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:7: error: not found: value lenght
    tree(steps-1,lenght*shrink,angle,shrink)
                 ^