recursion.logo.lessons.recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  if (steps==0) {
    return
  }
  else {
    avance(length)
    tree(steps-1,lenght*shrink,angle,shrink)
    
  }
}